tests/baselines/reference/lambdaPropSelf.errors.txt
lambdaPropSelf.ts(20,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
lambdaPropSelf.ts(21,13): error TS2331: 'this' cannot be referenced in a module or namespace body.


==== lambdaPropSelf.ts (2 errors) ====
    declare var ko: any;
    
    class Person {
        children: string[];
    
        constructor (public name: string, children: string[]) {
            this.children = ko.observableArray(children);
        }
    
        addChild = () => this.children.push("New child");
    }
    
    
    class T {
         fo() {
            var x = this;
        }
    }
    
    module M {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        var x = this;
                ~~~~
!!! error TS2331: 'this' cannot be referenced in a module or namespace body.
    }
    